--- a/Project 5/styles.css
+++ b/Project 5/styles.css
@@ -18,6 +18,7 @@
 }
 .image-box {
     background-image: url(images/evian_origins_logo.png);
+    background-size: cover;
     display: flex;
     align-items:center;
     justify-content: center;
